@@ -25,21 +25,23 @@ import java.util.*;
  * 守护服务工具类
  *
  * @author zhuquanwen
- * @vesion 1.0
+ * @version 1.0
  * @date 2021/10/27
  * @since jdk1.8
  */
+@SuppressWarnings({"unused", "unchecked"})
 public class KcDaemonsetUtils {
-    private KcDaemonsetUtils() {}
+    private KcDaemonsetUtils() {
+    }
 
     /**
      * 获取daemonset的信息
-     * @version 1.0
-     * @since jdk1.8
-     * @date 2021/10/27
+     *
      * @param namespace 命名空间
-     * @throws
-     * @return
+     * @return List<KcDaemonset>
+     * @throws K8sClientException 异常
+     * @date 2021/10/27
+     * @since jdk1.8
      */
     public static List<KcDaemonset> getDaemonset(String namespace) throws K8sClientException {
 
@@ -54,24 +56,23 @@ public class KcDaemonsetUtils {
                     List<DaemonSet> items = daemonsetList.getItems();
                     if (CollectionUtils.isNotEmpty(items)) {
                         kcDaemonsets = new ArrayList<>();
-                        for (int i = 0; i < items.size(); i++) {
+                        for (DaemonSet item : items) {
                             String name = null;
                             Integer currentRepSum = null;
                             Integer planRepSum = null;
                             String runtimeStr = null;
-                            List<KcRuntimeInfo> runtimeInfos = null;
-                            KcDepBaseInfo baseInfo = null;
+                            List<KcRuntimeInfo> runtimeInfos;
+                            KcDepBaseInfo baseInfo;
 
                             KcDaemonset kcDaemonset = new KcDaemonset();
-                            DaemonSet daemonSet = items.get(i);
 
-                            ObjectMeta metadata = daemonSet.getMetadata();
+                            ObjectMeta metadata = item.getMetadata();
                             if (metadata != null) {
                                 //获取name
                                 name = metadata.getName();
                                 //获取运行时间
                                 String creationTimestamp = metadata.getCreationTimestamp();
-                                Date startTime = null;
+                                Date startTime;
                                 try {
                                     startTime = DateSafeUtils.parse(creationTimestamp, K8sConstants.TIME_PATTERN);
                                     startTime = CommonUtils.timeOffset(startTime);
@@ -81,19 +82,19 @@ public class KcDaemonsetUtils {
                                 runtimeStr = CommonUtils.getTimeDistance(startTime);
                             }
 
-                            DaemonSetStatus status = daemonSet.getStatus();
+                            DaemonSetStatus status = item.getStatus();
                             if (status != null) {
                                 planRepSum = status.getDesiredNumberScheduled();
                                 currentRepSum = status.getNumberReady();
                             }
 
                             //获取基本信息
-                            baseInfo = setBaseInfo(daemonSet);
+                            baseInfo = setBaseInfo(item);
 
-                            setVolumns(daemonSet, kcDaemonset);
+                            setVolumns(item, kcDaemonset);
 
                             //获取运行时信息
-                            runtimeInfos  = setRuntimeInfo(daemonSet);
+                            runtimeInfos = setRuntimeInfo(item);
 
                             kcDaemonset.setCurrentRepSum(currentRepSum)
                                     .setName(name)
@@ -101,11 +102,8 @@ public class KcDaemonsetUtils {
                                     .setRuntimeStr(runtimeStr)
                                     .setBaseInfo(baseInfo)
                                     .setRuntimeInfos(runtimeInfos);
-                            kcDaemonset.setDaemonsetItem(daemonSet);
+                            kcDaemonset.setDaemonsetItem(item);
 
-                            //获取存储卷声明
-//                            List<KcVolumeClaimTemplate> kcVolumeClaimTemplates = setVolumeClaimTemplate(daemonSet);
-//                            kcDaemonset.setVolumeClaimTemplates(kcVolumeClaimTemplates);
                             kcDaemonsets.add(kcDaemonset);
                         }
                     }
@@ -118,14 +116,15 @@ public class KcDaemonsetUtils {
 
     /**
      * 创建一个Daemonset
-     * */
+     */
+    @SuppressWarnings("AlibabaMethodTooLong")
     public static void createDaemonset(KcDaemonset kcDaemonset) throws K8sClientException {
         @Cleanup KubernetesClient kc = K8sClient.getInstance();
         KcDepBaseInfo baseInfo = kcDaemonset.getBaseInfo();
         List<KcVolume> volumes = kcDaemonset.getVolumes();
 
         //命名空间
-        String namespace  = baseInfo.getNamespace();
+        String namespace = baseInfo.getNamespace();
         String name = baseInfo.getName();
 
         //如果存在，删除这个Daemonset
@@ -155,9 +154,6 @@ public class KcDaemonsetUtils {
         //spec
         DaemonSetSpec daemonsetSpec = new DaemonSetSpec();
 
-        //replics
-//        daemonsetSpec.setReplicas(baseInfo.getPlanRepSum());
-
         //selector
         LabelSelector labelSelector = new LabelSelector();
         labelSelector.setMatchLabels(labelMap);
@@ -179,7 +175,7 @@ public class KcDaemonsetUtils {
         if (StringUtils.isNotEmpty(imagePullSecret)) {
             LocalObjectReference localObjectReference = new LocalObjectReference();
             localObjectReference.setName(imagePullSecret);
-            podSpec.setImagePullSecrets(Arrays.asList(localObjectReference));
+            podSpec.setImagePullSecrets(List.of(localObjectReference));
         }
 
         //template-spec-init container
@@ -214,30 +210,6 @@ public class KcDaemonsetUtils {
 
         daemonset.setSpec(daemonsetSpec);
 
-        //构建存储卷声明
-//        List<KcVolumeClaimTemplate> volumeClaimTemplates = kcDaemonset.getVolumeClaimTemplates();
-//        if (CollectionUtils.isNotEmpty(volumeClaimTemplates)) {
-//            List<PersistentVolumeClaim> persistentVolumeClaims = volumeClaimTemplates.stream()
-//                    .map(vct -> {
-//                        PersistentVolumeClaim persistentVolumeClaim = new PersistentVolumeClaim();
-//                        PersistentVolumeClaimSpec persistentVolumeClaimSpec = new PersistentVolumeClaimSpec();
-//                        persistentVolumeClaimSpec.setAccessModes(vct.getAccessModes());
-//                        persistentVolumeClaimSpec.setStorageClassName(vct.getStorageClass());
-//                        if (vct.getStorage() != 0) {
-//                           ResourceRequirements resourceRequirements = new ResourceRequirements();
-//                           Map<String, Quantity> requests = new HashMap<>();
-//                           requests.put("storage", Quantity.parse(((Double) vct.getStorage()).intValue() + "Gi"));
-//                           resourceRequirements.setRequests(requests);
-//                            persistentVolumeClaimSpec.setResources(resourceRequirements);
-//                        }
-//                        ObjectMeta meta = new ObjectMeta();
-//                        meta.setName(vct.getName());
-//                        persistentVolumeClaim.setMetadata(meta);
-//                        persistentVolumeClaim.setSpec(persistentVolumeClaimSpec);
-//                        return persistentVolumeClaim;
-//                    }).collect(Collectors.toList());
-//            daemonset.getSpec().setVolumeClaimTemplates(persistentVolumeClaims);
-//        }
         Resource<DaemonSet> daemonSetResource = apps.daemonSets().inNamespace(namespace).withName(name);
         if (daemonSetResource.get() != null) {
             //编辑
@@ -296,22 +268,22 @@ public class KcDaemonsetUtils {
 
     /**
      * 设置运行时信息
-     * */
+     */
     private static List<KcRuntimeInfo> setRuntimeInfo(DaemonSet daemonset) throws K8sClientException {
         List<KcRuntimeInfo> kcConditions = null;
         DaemonSetStatus depStatus = daemonset.getStatus();
         if (depStatus != null) {
             List<DaemonSetCondition> conditions = depStatus.getConditions();
             if (CollectionUtils.isNotEmpty(conditions)) {
-                kcConditions  = new ArrayList<>();
+                kcConditions = new ArrayList<>();
                 for (DaemonSetCondition condition : conditions) {
                     KcRuntimeInfo kcCondtion = new KcRuntimeInfo();
-                    String type = null;
-                    String status = null;
-                    Date lastUpdateTime = null;
-                    Date lastTransationTime = null;
-                    String reason = null;
-                    String message = null;
+                    String type;
+                    String status;
+                    Date lastUpdateTime;
+                    Date lastTransationTime;
+                    String reason;
+                    String message;
 
                     type = condition.getType();
                     status = condition.getStatus();
@@ -341,18 +313,18 @@ public class KcDaemonsetUtils {
 
 
     /**
-     *  设置deployment的基本信息
-     * */
+     * 设置deployment的基本信息
+     */
     private static KcDepBaseInfo setBaseInfo(DaemonSet daemonset) {
         KcDepBaseInfo baseInfo = new KcDepBaseInfo();
         String type = "daemonset";
-        String name = null;
-        List<String[]> labels = new ArrayList<>();
-        List<String[]> annotations = new ArrayList<>();
+        String name;
+        List<String[]> labels;
+        List<String[]> annotations;
         String description = null;
         Integer currentRepSum = null;
         Integer planRepSum = null;
-        String namespace = null;
+        String namespace;
 
         ObjectMeta metadata = daemonset.getMetadata();
 
@@ -362,7 +334,7 @@ public class KcDaemonsetUtils {
         annotations = (List<String[]>) metaDataResultMap.get("annotations");
 
         DaemonSetSpec spec = daemonset.getSpec();
-        List<String[]> matchLabels = new ArrayList<>();
+        List<String[]> matchLabels;
         LabelSelector selector = spec.getSelector();
         PodTemplateSpec template = spec.getTemplate();
         Map<String, Object> specResultMap = KcDeploymentUtils.setSpec(selector, template);
@@ -374,6 +346,7 @@ public class KcDaemonsetUtils {
             planRepSum = status.getDesiredNumberScheduled();
             currentRepSum = status.getNumberReady();
         }
+        //noinspection ConstantConditions
         baseInfo.setType(type)
                 .setName(name)
                 .setDescription(description)
@@ -408,14 +381,11 @@ public class KcDaemonsetUtils {
 
     public static void restartDaemonset(String namespace, String name) {
         throw new UnsupportedOperationException("daemonset不支持重启");
-//        @Cleanup KubernetesClient kc = K8sClient.getInstance();
-//        Resource<DaemonSet> daemonSetResource = kc.apps().daemonSets().inNamespace(namespace).withName(name);
-
     }
 
     /**
      * 伸缩
-     * */
+     */
     public static void scale(String namespace, String name, Integer maxReplicas) throws K8sClientException {
         @Cleanup KubernetesClient kc = K8sClient.getInstance();
         AppsAPIGroupDSL apps = kc.apps();
